tests/expected_invalid_failing_match_state_pattern.diag.out
<input>:13:9: error: match over a `fails` call requires succeeded(...) and failed(...) patterns
            Bad => 1,
            ^^^
